# extended-paper-scraper

./: .gitignore  CLAUDE.md  LICENSE  README.md  aaai_scraper.py  acl_scraper.py  api_client.py  build.sh  citations.py  cli.py  config.py  models.py  pyproject.toml  run.sh  scrape_confpage.py  setup.sh
.claude/skills/release-data/: SKILL.md
.github/workflows/: deploy.yml
configs/: corl_2023.yaml  corl_2024.yaml  corl_2025.yaml  neurips_2023.yaml  neurips_2024.yaml  neurips_2025.yaml
docs/superpowers/plans/: 2026-04-01-paper-explorer.md
docs/superpowers/specs/: 2026-04-01-paper-explorer-design.md  2026-04-06-se-conferences-dblp-scraper-design.md
ppr/: api_client.py  citations.py  cli.py  config.py  models.py  validate.py
ppr/scrapers/: __init__.py  aaai.py  acl.py  arxiv.py  cvf.py  dblp.py  public_web.py  rss.py  usenix.py
scripts/: build_data.py  export_distillation_database.py  extract_distillation.py
tests/: test_acl.py  test_api_client.py  test_arxiv.py  test_build_data.py  test_citations.py  test_cli.py  test_config.py  test_cvf.py  test_dblp.py  test_extract_distillation.py  test_models.py  test_public_web.py  test_rss.py  test_validate.py
web/: package-lock.json  package.json
web/src/: App.css  App.tsx  types.ts
web/src/components/: ConferenceCard.css  ConferenceCard.tsx  PaperRow.css  PaperRow.tsx  SearchInput.css  SearchInput.tsx  TrackBadge.css  TrackBadge.tsx
web/src/hooks/: useAuthors.ts  useConferenceData.ts  useManifest.ts  useTrends.ts
web/src/pages/: Conference.css  Conference.tsx  Home.css  Home.tsx  Trends.css  Trends.tsx
(+5 files in other folders)
